# oscillo

./: Cargo.toml
crates/osc-ast-explorer/: Cargo.toml  Trunk.toml
crates/osc-ast-explorer/src/: main.rs
crates/osc-parser/: Cargo.toml
crates/osc-parser/src/: diagnostic.rs  lexer.rs  lib.rs  parser.rs
crates/osc-parser/src/chars/: generated.rs
crates/osc-parser/src/lexer/: cursor.rs  lexer.rs  lexical_analyzer.rs
crates/osc-parser/src/parser/: common.rs  decl.rs  expr.rs  member.rs  osc_file.rs
crates/osc-parser/src/parser/member/: behavior.rs  field.rs
oscelas/: Cargo.toml
oscelas/src/: char_set.rs  diagnostic.rs  lexer.rs  main.rs  parser.rs  syntax.rs
oscelas/src/lexer/: chars.rs  cursor.rs  lexer.rs  lexical_analyzer.rs  lookahead.rs  raw_lexer.rs
oscelas/src/parser/: common.rs  decl.rs  expr.rs  member.rs  osc_file.rs
oscelas/src/parser/decl/: action_decl.rs  actor_decl.rs  enum_decl.rs  modifier_decl.rs  physical_type_decl.rs  scenario_decl.rs  struct_decl.rs  type_extension.rs
oscelas/src/parser/member/: behavior.rs  event.rs  field.rs  method.rs
oscelas/src/syntax/: generated.rs
src/: lexer.rs
src/lexer/: chars.rs  identifier_char.rs  lexer.rs  token.rs
xtask/: Cargo.toml
xtask/src/: generate_char_set.rs  generate_syntax_kind.rs  generate_syntax_node.rs  grammar.rs  main.rs  open_scenario_dsl.ungram  osc.rs  osc.ungram  osc_dsl.ungram  oscdsl.rs  oscdsl.ungram  syntax.rs  syntax_name.rs  syntax_spec.rs
xtask/src/syntax/: generate_syntax_kind.rs  generate_syntax_node.rs  grammar.rs  osc.rs  syntax_name.rs
