[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
convert_case = "0.6.0"
quote = "1.0.36"
tempdir = "0.3.7"
ungrammar = "1.16.1"
xshell = "0.2.6"
